# localhawk

./: .gitignore  CLAUDE.md  Cargo.toml  FFI_SETUP.md  LICENSE-MIT  README.md  build_ios.sh
.claude/: settings.local.json
LocalHawkiOS/LocalHawkiOS/: AdvancedOptionsView.swift  ContentView.swift  LocalHawkiOS-Bridging-Header.h  LocalHawkiOSApp.swift  PrintSelectionView.swift  ProxyGenerator.swift
LocalHawkiOS/LocalHawkiOS.xcodeproj/: project.pbxproj
LocalHawkiOS/LocalHawkiOS/Assets.xcassets/AppIcon 1.appiconset/: Contents.json
LocalHawkiOS/LocalHawkiOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
MagicProxyiOS/MagicProxyiOS/: AdvancedOptionsView.swift  ContentView.swift  MagicProxyiOS-Bridging-Header.h  MagicProxyiOSApp.swift  ProxyGenerator.swift
MagicProxyiOS/MagicProxyiOS.xcodeproj/: project.pbxproj
localhawk-cli/: Cargo.toml
localhawk-cli/src/: main.rs
localhawk-core/: Cargo.toml
localhawk-core/include/: localhawk.h
localhawk-core/src/: cache_logic.rs  card_name_cache.rs  error.rs  ffi.rs  globals.rs  http_client.rs  ios_api.rs  ios_cache.rs  lib.rs  pagination.rs  search_results_cache.rs  set_codes_cache.rs
localhawk-core/src/cache/: file_storage.rs  lru_cache.rs  lru_image_cache.rs  lru_search_cache.rs  mod.rs  search_json_storage.rs  vector_storage.rs
localhawk-core/src/decklist/: mod.rs
localhawk-core/src/lookup/: mod.rs
localhawk-core/src/scryfall/: client.rs
localhawk-gui/: Cargo.toml
localhawk-gui/src/: app.rs  main.rs
magic-proxy-cli/: Cargo.toml
magic-proxy-cli/src/: main.rs
magic-proxy-core/: Cargo-ios.toml  Cargo.toml
magic-proxy-core/include/: magic_proxy.h
magic-proxy-core/src/: background_loading.rs  card_name_cache.rs  error.rs  ffi.rs  format.rs  globals.rs  layout.rs  lib.rs  search_results_cache.rs  set_codes_cache.rs
magic-proxy-core/src/cache/: file_storage.rs  lru_image_cache.rs  lru_search_cache.rs  lru_tests.rs  mod.rs  modern_image_cache.rs  modern_search_cache.rs  search_json_storage.rs
magic-proxy-core/src/decklist/: mod.rs
magic-proxy-core/src/lookup/: mod.rs
magic-proxy-core/src/pdf/: mod.rs
magic-proxy-core/src/scryfall/: api.rs  client.rs  mod.rs  models.rs
magic-proxy-gui/: Cargo.toml
magic-proxy-gui/src/: app.rs  main.rs
test-cache-location/: Cargo.toml
test-cache-location/src/: main.rs
