[package]
name = "localhawk-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
printpdf = { workspace = true }
time = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
tracing = "0.1"
directories = { workspace = true }
itertools = "0.13"
regex = { workspace = true }
ngrammatic = { workspace = true }
ord_subset = { workspace = true }
sha2 = "0.10"
libc = "0.2"
# Override image crate to disable multithreading and avoid iOS QoS issues
# LIMITATION: jpeg-decoder still creates worker threads despite default-features = false
# This causes Thread Performance Checker warnings on iOS but doesn't break functionality
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
jpeg-decoder = { version = "0.3", default-features = false }

