[package]
name = "localhawk-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
ios = ["ureq"]

[dependencies]
# Desktop dependencies (always available by default)
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
tokio-util = "0.7"

# iOS only (sync) - optional for iOS static library builds
ureq = { version = "2.8", features = ["native-tls", "json"], optional = true }

# Shared dependencies
serde = { workspace = true }
serde_json = { workspace = true }
printpdf = { workspace = true }
time = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
env_logger = "0.10"
tracing = "0.1"
directories = { workspace = true }
itertools = "0.13"
regex = { workspace = true }
ngrammatic = { workspace = true }
ord_subset = { workspace = true }
sha2 = "0.10"
libc = "0.2"
# Override image crate to disable multithreading and avoid iOS QoS issues
# LIMITATION: jpeg-decoder still creates worker threads despite default-features = false
# This causes Thread Performance Checker warnings on iOS but doesn't break functionality
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
jpeg-decoder = { version = "0.3", default-features = false }

