[package]
name = "magic-proxy-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = "0.7"
printpdf = { workspace = true }
time = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
tracing = "0.1"
directories = { workspace = true }
itertools = "0.13"
regex = { workspace = true }
ngrammatic = { workspace = true }
ord_subset = { workspace = true }
sha2 = "0.10"

